--- a/BipedalWalker_Implementation.ipynb
+++ b/BipedalWalker_Implementation.ipynb
@@ -340,7 +340,7 @@
         "\n",
         "# Save Phase 2 model (our best performer!)\n",
         "improved_model.save(\"ppo_bipedal_improved\")\n",
-        "print(\"\\n💾 Phase 2 model saved as: ppo_bipedal_improved\")\n"
+        "print(\"\\n Phase 2 model saved as: ppo_bipedal_improved\")\n"
       ]
     },
     {
@@ -493,7 +493,7 @@
         "\n",
         "# Save Phase 3 model\n",
         "shaped_model.save(\"ppo_bipedal_shaped\")\n",
-        "print(\"\\n💾 Phase 3 model saved as: ppo_bipedal_shaped\")\n",
+        "print(\"\\n Phase 3 model saved as: ppo_bipedal_shaped\")\n",
         "\n",
         "eval_env.close()\n"
       ]
@@ -629,7 +629,7 @@
       "metadata": {},
       "source": [
         "---\n",
-        "# Phase 5: The Ultimate Solution 🎯\n",
+        "# Phase 5: The Ultimate Solution \n",
         "\n",
         "**Combining ALL winning strategies:**\n",
         "1.  Improved PPO hyperparameters (Phase 2)\n",
@@ -637,7 +637,7 @@
         "3.  **Observation normalization** (NEW!)\n",
         "4.  **Action smoothing wrapper** (NEW!)\n",
         "\n",
-        "**Expected Result: 280-340 points (SHOULD SOLVE IT!)** 🚀\n"
+        "**Expected Result: 280-340 points (SHOULD SOLVE IT!)** \n"
       ]
     },
     {
@@ -1229,7 +1229,7 @@
         "print(\"\\n\" + \"=\"*70)\n",
         "print(\"COMPREHENSIVE RESULTS SUMMARY\")\n",
         "print(\"=\"*70)\n",
-        "print(\"\\n📊 All Results:\")\n",
+        "print(\"\\n All Results:\")\n",
         "print(f\"  Phase 1 - Baseline PPO:            {mean_reward:.2f} ± {std_reward:.2f}\")\n",
         "print(f\"  Phase 2 - Improved PPO (500k):     {mean_reward_improved:.2f} ± {std_reward_improved:.2f}\")\n",
         "print(f\"  Phase 3 - PPO + Shaping:           {mean_reward_shaped:.2f} ± {std_reward_shaped:.2f}\")\n",
@@ -1237,7 +1237,7 @@
         "print(f\"  Phase 5 - ULTIMATE:                {mean_reward_ultimate:.2f} ± {std_reward_ultimate:.2f}\")\n",
         "print(f\"  Phase 6 - Extended Phase 3:        {mean_reward_phase6:.2f} ± {std_reward_phase6:.2f}\")\n",
         "print(f\"  Phase 7 - Extended Phase 2 (1M):   {mean_reward_phase7:.2f} ± {std_reward_phase7:.2f}\")\n",
-        "print(f\"  Phase 8 - Extended Phase 2 (2M) ⭐: {mean_reward_phase8:.2f} ± {std_reward_phase8:.2f}\")\n",
+        "print(f\"  Phase 8 - Extended Phase 2 (2M) : {mean_reward_phase8:.2f} ± {std_reward_phase8:.2f}\")\n",
         "\n",
         "print(\"\\n🔬 Key Improvements Applied:\")\n",
         "print(\"   Improved Hyperparameters (Phase 2):\")\n",
@@ -1416,17 +1416,17 @@
         "        f.write(f\"  - vf_coef: 0.5\\n\")\n",
         "        f.write(f\"  - batch_size: 128\\n\")\n",
         "        f.write(f\"\\nKey Insight:\\n\")\n",
-        "        f.write(f\"  💡 No reward shaping needed!\\n\")\n",
-        "        f.write(f\"  💡 No complex wrappers needed!\\n\")\n",
-        "        f.write(f\"  💡 Just good hyperparameters + sufficient training time!\\n\")\n",
-        "        f.write(f\"  💡 Achieved 265.87 pts (34 pts from 300 target)\\n\")\n",
-        "        f.write(f\"  💡 Variance decreased from ±115 → ±43 (strong convergence!)\\n\")\n",
+        "        f.write(f\"   No reward shaping needed!\\n\")\n",
+        "        f.write(f\"   No complex wrappers needed!\\n\")\n",
+        "        f.write(f\"   Just good hyperparameters + sufficient training time!\\n\")\n",
+        "        f.write(f\"   Achieved 265.87 pts (34 pts from 300 target)\\n\")\n",
+        "        f.write(f\"   Variance decreased from ±115 → ±43 (strong convergence!)\\n\")\n",
         "        f.write(f\"\\nProgression:\\n\")\n",
         "        f.write(f\"  Phase 1 (Baseline, 100k):     {mean_reward:.2f}\\n\")\n",
         "        f.write(f\"  Phase 2 (Improved, 500k):     {mean_reward_improved:.2f}\\n\")\n",
         "        f.write(f\"  Phase 3 (Shaping - BAD):      {mean_reward_shaped:.2f}\\n\")\n",
         "        f.write(f\"  Phase 7 (Extended, 1M):       {mean_reward_phase7:.2f}\\n\")\n",
-        "        f.write(f\"  Phase 8 (Extended, 2M):       {mean_reward_phase8:.2f} ⭐\\n\")\n",
+        "        f.write(f\"  Phase 8 (Extended, 2M):       {mean_reward_phase8:.2f} \\n\")\n",
         "    \n",
         "    print(f\" Best video saved: {output_path}\")\n",
         "    print(f\" Video info saved: {info_file}\")\n",
@@ -1471,103 +1471,3 @@
         "    print(\"Manual download: Click the folder icon on the left, navigate to 'videos/', right-click → Download\")\n"
       ]
     },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---\n",
-        "#  Summary\n",
-        "\n",
-        "## What We Did:\n",
-        "1.  **Phase 1**: Documented vanilla PPO failure (as predicted)\n",
-        "2.  **Phase 2**: Applied literature-based improvements (n_epochs, ent_coef, vf_coef)\n",
-        "3.  **Phase 3**: Implemented reward shaping (upright, smooth, no spinning) → HURT performance\n",
-        "4.  **Phase 4**: Tested SAC (discovered incompatibility with reward shaping)\n",
-        "5.  **Phase 5**: Tried obs normalization (learned about train/eval matching)\n",
-        "6.  **Phase 6**: Extended Phase 3 (wrong model) - performance declined\n",
-        "7.  **Phase 7**: Extended Phase 2 (RIGHT model, 1M) → 240 pts\n",
-        "8.  **Phase 8**: Extended Phase 2 to 2M → **265.87 pts!** ⭐\n",
-        "\n",
-        "## Key Papers Referenced:\n",
-        "1. Value Function Training: https://arxiv.org/abs/2505.19247\n",
-        "2. Manipulability Rewards: https://www.sciencedirect.com/science/article/pii/S0921889025003069\n",
-        "3. See RESEARCH_NOTES.md for full list\n",
-        "\n",
-        "## Key Findings:\n",
-        "-  Increasing n_epochs from 10→30 was CRITICAL (Phase 2: +300 pts improvement!)\n",
-        "-  Reward shaping HURT performance (Phase 3: -43 pts from Phase 2)\n",
-        "-  Extended training crucial for strong performance (Phase 7 & 8)\n",
-        "-  SAC + reward shaping = incompatible (off-policy issue)\n",
-        "-  Observation normalization + action smoothing = catastrophic failure (-10 pts)\n",
-        "-  **Key insight**: Simple is better! Good hyperparameters > complex techniques\n",
-        "\n",
-        "## Results Summary:\n",
-        "- **Phase 8 (2M timesteps)**: **265.87 ± 43.46 points** - Strong performance!\n",
-        "- Phase 2 was our best baseline (208 pts) - NOT Phase 3!\n",
-        "- Phase 7 (1M): 240 pts - Good progress!\n",
-        "- Phase 8 (2M): 265.87 pts - Consistent improvement trend, variance decreased dramatically\n",
-        "- Reward shaping was unnecessary and harmful\n",
-        "- Systematic approach revealed what works and what doesn't\n",
-        "- Research-driven methodology successful!\n",
-        "- **34 points away from 300** - additional training to 2.5M-3M would likely solve it!\n",
-        "\n",
-        "## Next Steps:\n",
-        "- [x] Extended training on correct model (Phase 7 & 8)\n",
-        "- [x] Achieved 265.87 pts on Phase 8 (2M timesteps)\n",
-        "- [ ] Record video of best model (Phase 8)\n",
-        "- [ ] Write comprehensive report with citations\n",
-        "- [ ] Document research process and lessons learned\n",
-        "- [ ] Include this notebook in submission\n",
-        "- [ ] (Optional) Phase 9: Train to 2.5M-3M timesteps to reach 300+ target\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "---\n",
-        "#  How to Run This Notebook\n",
-        "\n",
-        "## Step 1: Enable GPU\n",
-        "1. Go to **Runtime** → **Change runtime type**\n",
-        "2. Set **Hardware accelerator** to **GPU** (T4 or better recommended)\n",
-        "3. Click **Save**\n",
-        "\n",
-        "## Step 2: Run ALL cells in order\n",
-        "- Click **Runtime** → **Run all**\n",
-        "- Or run cells one by one with `Shift+Enter`\n",
-        "\n",
-        "## Step 3: Monitor Progress\n",
-        "- Training times (on A100):\n",
-        "  - Phase 1: ~10-15 mins\n",
-        "  - Phase 2: ~40-50 mins\n",
-        "  - Phase 3: ~40-50 mins\n",
-        "  - Phase 4: ~90 mins (SAC is slower)\n",
-        "  - Phase 5: ~70 mins\n",
-        "  - Phase 6: ~50 mins\n",
-        "  - Phase 7: ~50 mins\n",
-        "  - Phase 8: ~80-90 mins\n",
-        "- **Total time: 5-6 hours for all phases**\n",
-        "\n",
-        "## Step 4: Review Results\n",
-        "- Check the comparison plot at the end\n",
-        "- Final Phase 8 result: **265.87 ± 43.46 points**\n",
-        "- Use findings for your writeup\n",
-        "\n",
-        "## Tips:\n",
-        "- ☕ Grab coffee (or lunch) during training!\n",
-        "- 📊 TensorBoard logs saved for analysis\n",
-        "- 💾 Models saved automatically\n",
-        "- 📝 Document observations as you go\n",
-        "- 🎥 Video recording at the end for submission\n"
-      ]
-    }
-  ],
-  "metadata": {
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 2
-}
